<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DisplayModes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_email">Email</string>
    <string name="hint_email">email</string>
    <string name="txt_password">Password</string>
    <string name="hint_password">password</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>

</resources>