<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:layout_margin="10dp" >

    <TableRow>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_email" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_password" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />
    </TableRow>

</TableLayout>